--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -154,7 +154,18 @@ img {
   background-color: var(--first-color);
 }
 .nav__logo {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem; 
   color: var(--second-color);
+  font-weight: var(--font-semi);
+  font-size: 1rem;
+}
+
+.nav__logo-img {
+  border-radius: 100%;
+  height: 1.5rem;
+  width: auto;
 }
 .nav__toggle {
   color: var(--second-color);
