--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -195,12 +195,7 @@ img {
 }
 
 /*===== Unit pages =====*/
-.communications-home {
-  background-image: url("/static/img/broadcasting.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
+
 
 /*===== HOME =====*/
 .home {
@@ -242,6 +237,22 @@ img {
 }
 .home__blob-img {
   height: 500px;
+}
+.home__decor {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none; /* So they don’t block clicking */
+  z-index: 0; /* Make sure it's behind the main text */
+}
+
+.decor-icon {
+  position: absolute;
+  font-size: 2rem;
+  color: rgba(0, 0, 0, 0.2); /* Light gray */
+  transform-origin: center;
 }
 
 /*BUTTONS*/
