--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -244,14 +244,14 @@ img {
   left: 0;
   width: 100%;
   height: 100%;
-  pointer-events: none; /* So they don’t block clicking */
-  z-index: 0; /* Make sure it's behind the main text */
+  pointer-events: none;
+  z-index: 0;
 }
 
 .decor-icon {
   position: absolute;
   font-size: 2rem;
-  color: rgba(0, 0, 0, 0.2); /* Light gray */
+  color: rgba(0, 0, 0, 0.2);
   transform-origin: center;
 }
 
